[gd_scene load_steps=4 format=3 uid="uid://bcayb63x24w31"]

[ext_resource type="Texture2D" uid="uid://bbestxy6h5pp8" path="res://icon.svg" id="1_vmmvv"]
[ext_resource type="Script" path="res://Scenes/Obstacles/QuarterPipe.gd" id="1_w0m7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2tgy"]
size = Vector2(128, 40.8701)

[node name="QuarterPipe" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_w0m7h")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
scale = Vector2(1, 0.167969)
texture = ExtResource("1_vmmvv")

[node name="Sprite2D2" type="Sprite2D" parent="Visuals"]
position = Vector2(-96, -42)
rotation = 0.785398
scale = Vector2(1, 0.167969)
texture = ExtResource("1_vmmvv")

[node name="Sprite2D3" type="Sprite2D" parent="Visuals"]
position = Vector2(-136, -141)
rotation = 1.5708
scale = Vector2(1, 0.167969)
texture = ExtResource("1_vmmvv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_s2tgy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-91.4497, -49.5503)
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_s2tgy")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(-128, -141)
rotation = 1.57393
shape = SubResource("RectangleShape2D_s2tgy")

[node name="Centre" type="Marker2D" parent="."]
position = Vector2(65, -201)

[node name="Exit1" type="Marker2D" parent="."]
position = Vector2(-125, -205)
rotation = -1.5708

[node name="Exit2" type="Marker2D" parent="."]
position = Vector2(64, -12)
